Fix media icons on mobile menu

--- a/src/less/mobileMenu.less
+++ b/src/less/mobileMenu.less
@@ -65,3 +65,7 @@
   }
 }
 
+.mobile-menu__share{
+  display: flex;
+}
+
